2018-09-19  Dirk Eddelbuettel  <edd@debian.org>

	* inst/iqssDemo/: Move iqss vignette material here as vignette
	processing requires the Libertinus font which may not be present

	* .travis.yml (dist): Added simple Travis CI support

2018-09-18  Dirk Eddelbuettel  <edd@debian.org>

	* vignettes/iqssDemo.Rmd: Added vignette for IQSS, based on skeleton

	* vignettes/*: Addedd required IQSS support files, figures in iqss/

	* inst/rmarkdown/templates/iqss/skeleton/skeleton.Rmd: Updated
 	* inst/rmarkdown/templates/metropolis/skeleton/skeleton.Rmd: Idem

	* R/binb.R: Manual page update
	* man/metropolis.Rd: Idem

2018-09-17  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Added initial README
	* figures/: Four support pdf and gif files used by README

2018-09-16  Dirk Eddelbuettel  <edd@debian.org>

	* R/binb.R (iqss): Process IQSS theme (translated to Markdown)

	* inst/rmarkdown/templates/iqss/skeleton/: Style files adapted
	from IQSS LaTeX example, along with png and pdf inputs used
	* inst/rmarkdown/templates/iqss/resources/template.tex: Idem

	* inst/rmarkdown/templates/metropolis/resources/template.tex: Switch
	to rounded parenthesis in natbib

	* vignettes/metropolisDemo.Rmd: Added extended RMarkdown demo
	* vignettes/metropolis/demo.bib: Demo bibliography
	* vignettes/metropolis/header.tex: Some extra definitions

2018-09-15  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Initial pre-release version
	* binb.R (metropolis): Process Metropolis (translated to Markdown)
	* man/metropolis.Rd: Documentation
	* inst/rmarkdown/templates/metropolis/skeleton/skeleton.Rmd:
	Example skeleton taken from my samples=rmarkdown-metropolis repo
	* inst/rmarkdown/templates/metropolis/resources/template.tex:
	Generic template for beamer presentations


