@@ -1,15 +1,16 @@
 Package: binb
 Type: Package
 Title: 'binb' is not 'Beamer'
-Version: 0.0.0
-Author: Dirk Eddelbuettel
+Version: 0.0.1
+Date: 2018-09-19
+Author: Dirk Eddelbuettel and Ista Zahn
 Maintainer: Dirk Eddelbuettel <edd@debian.org>
 Description: A collection of 'LaTeX' styles using 'Beamer' customization for
- pdf-based presentation slides in RMarkdown. At present it contains RMarkdown
- adaptations of the LaTeX themes 'Metropolis' (formerly 'mtheme') theme by
- Matthias Vogelgesang and others (now included in TeXLive), and the 'IQSS' by
- Ista Zahn (which is included here). Additional (free) fonts may be required:
- 'Metropolis' prefers 'Fira', and 'IQSS' requires 'Libertinus'.
+ pdf-based presentation slides in 'RMarkdown'. At present it contains
+ 'RMarkdown' adaptations of the LaTeX themes 'Metropolis' (formerly 'mtheme')
+ theme by Matthias Vogelgesang and others (now included in 'TeXLive'), and
+ the 'IQSS' by Ista Zahn (which is included here). Additional (free) fonts
+ may be needed: 'Metropolis' prefers 'Fira', and 'IQSS' requires 'Libertinus'.
 URL: https://github.com/eddelbuettel/binb
 BugReports: https://github.com/eddelbuettel/binb/issues
 Imports: rmarkdown, knitr
