@@ -59,7 +59,9 @@ iqss(toc = FALSE, slide_level = 3, incremental = FALSE,
 \item{pandoc_args}{An optional character variable defaulting to \code{NULL}.}
 }
 \value{
-RMarkdown content processed for rendering.
+RMarkdown content processed is returned for use by the
+\code{\link[rmarkdown]{render}} function but the function is invoked
+for it side effect of creating the pdf file.
 }
 \description{
 Templates for RMarkdown-based Beamer PDF presentations supporting
@@ -68,8 +70,17 @@ and the \sQuote{IQSS} style by Ista Zahn and Gary King.
 }
 \details{
 Note that not all options and customizations available at the LaTeX
-level are implemented or supported yet.
+level are implemented or supported yet.  A number of styling options
+could be exposed by setting YAML meta-data in the header for either
+style. This needs more testing and documentation.
 }
+\section{IQSS Details}{
+ We currently set \code{slide_level} to three to use
+the same appearance as the LaTeX demo. This means section and sub-section headers
+use one and two hash marks, new slides use three, and \dQuote{box} environments
+start with four. More commonly, Beamer theme use two and work without subsections.
+}
+
 \examples{
 \dontrun{
 library(rmarkdown)
@@ -77,6 +88,12 @@ draft("myslides.Rmd", template="metropolis", package="binb", edit=FALSE)
 setwd("myslides")       ## template creates a new subdir
 render("myslides.Rmd")
 }
+}
+\seealso{
+Three other packages also offer RMarkdown interfaces to LaTeX
+(or HTML) content: \code{\link[tint]{tint}} for Tufte-style pdf and html,
+\code{\link[pinp]{pinp}} for two-column pdf vignettes, and
+\code{\link[linl]{linl}} for LaTeX letters.
 }
 \author{
 Dirk Eddelbuettel
