@@ -1,0 +1,10 @@
+\name{NEWS}
+\title{News for Package \pkg{binb}}
+\newcommand{\ghpr}{\href{https://github.com/eddelbuettel/binb/pull/#1}{##1}}
+\newcommand{\ghit}{\href{https://github.com/eddelbuettel/binb/issues/#1}{##1}}
+
+\section{Changes in binb version 0.0.1 (2018-09-19)}{
+  \itemize{
+    \item Initial CRAN release supporting Metropolis and IQSS
+  }
+}
